Updated name and README

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "stream-screen"
+name = "wlstreamer"
 version = "0.1.0"
 authors = ["Benjamin Bädorf <hello@benjaminbaedorf.eu>"]
 edition = "2018"
