--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "wlstreamer"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["Benjamin Bädorf <hello@benjaminbaedorf.eu>"]
 edition = "2018"
 
 [dependencies]
+serde = { version = "1.0", features = ["derive"]}
+serde_json = "1.0"
